AUGREL/src/objects/Form_Field_Junction__c.object
<CustomObject>
    <description>Junction object linking Forms with their Form Fields and supporting re-use of fields across forms.</description>
    <fields>
        <fullName>FFMigrationID__c</fullName>
        <formula>Form_Field__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMigrationID__c</fullName>
        <formula>Form__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Field__c</fullName>
        <label>Form Field</label>
        <referenceTo>Form_Field__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Form_Field_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Field_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field if checked then the field is mandatory, if unchecked Field is optional.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Form-Field Junction</label>
    <nameField>
        <displayFormat>FF-{000000}</displayFormat>
        <label>Form-Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form-Field Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>